--- a/src/app/genera-localizacion/genera-localizacion.component.html
+++ b/src/app/genera-localizacion/genera-localizacion.component.html
@@ -13,14 +13,20 @@
             <mat-icon>refresh</mat-icon>
           </button>
 
-          <div [hidden]="!((ccaaGenerado.data.length && ccaaGenerado.data.length > 0))">
+          <div [hidden]="!((ccaaGeneradoOriginal.length && ccaaGeneradoOriginal.length > 0))">
             <table mat-table #sortCcaaGenerado="matSort" [dataSource]="ccaaGenerado" matSort  (matSortChange)="announceSortChange($event)">
 
               <!-- Opcion de parametrizar columna y mostrar por tipo en vez de hacerlo por cada columna
                 https://muhimasri.com/blogs/create-an-editable-dynamic-table-using-angular-material/
               -->
               <ng-container [matColumnDef]="col.key" *ngFor="let col of columnsSchemaCcaaGenerado">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{col.label}}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{col.label}}
+                  <button mat-icon-button (click)="$event.stopPropagation(); openFilterCCAA(col.key); ">
+                    <mat-icon>search</mat-icon>
+                  </button>
+                  <input class="filtroCabeceraTabla" #inputSearchCCAA type="text" hidden id="{{col.key}}-filterCCAA"
+                    (blur)="filterDataCCAA(col.columna, inputSearchCCAA.value); closeFilterCCAA(col.key)" />
+                </th>
                 <td mat-cell *matCellDef="let ccaa">
                   <!-- Seleccionamos por el type como mostrarlo-->
                   <div [ngSwitch]="col.type" >
@@ -50,6 +56,10 @@
               <button type="button" style="margin-left: 5px;"  mat-fab aria-label="Limpiar resultado" (click)="onClickLimpiarCCAA()"
                 matTooltip="Pulsar para limpiar el CCAA" matTooltipPosition="below">
                 <mat-icon>delete</mat-icon>
+              </button>
+              <button type="button" mat-fab style="margin-left: 5px;" aria-label="Limpiar filtros" (click)="onClickLimpiarFiltrosCCAA()"
+                matTooltip="Limpia filtros aplicados volviendo a los datos originales" matTooltipPosition="below">
+                <mat-icon>cleaning_services</mat-icon>
               </button>
               <button type="button"  style="margin-left: 5px;"  mat-fab aria-label="Exportar a Excel" (click)="exportJsonCCAA()"
                 matTooltip="Pulsar para exportar excel" matTooltipPosition="below">
@@ -85,14 +95,20 @@
             <mat-icon>refresh</mat-icon>
           </button>
 
-          <div [hidden]="!((provinGenerado.data.length && provinGenerado.data.length > 0))">
+          <div [hidden]="!((provinGeneradoOriginal.length && provinGeneradoOriginal.length > 0))">
             <table mat-table #sortProvinGenerado="matSort" [dataSource]="provinGenerado" matSort  (matSortChange)="announceSortChange($event)">
 
               <!-- Opcion de parametrizar columna y mostrar por tipo en vez de hacerlo por cada columna
                 https://muhimasri.com/blogs/create-an-editable-dynamic-table-using-angular-material/
               -->
               <ng-container [matColumnDef]="col.key" *ngFor="let col of columnsSchemaProvinGenerado">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{col.label}}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{col.label}}
+                  <button mat-icon-button (click)="$event.stopPropagation(); openFilterProvincia(col.key); ">
+                    <mat-icon>search</mat-icon>
+                  </button>
+                  <input class="filtroCabeceraTabla" #inputSearchProvincia type="text" hidden id="{{col.key}}-filterProvincia"
+                    (blur)="filterDataProvincia(col.columna, inputSearchProvincia.value); closeFilterProvincia(col.key)" />
+                </th>
                 <td mat-cell *matCellDef="let provincia">
                   <!-- Seleccionamos por el type como mostrarlo-->
                   <div [ngSwitch]="col.type" >
@@ -123,6 +139,10 @@
               <button type="button" mat-fab style="margin-left: 5px;" aria-label="Limpiar resultado" (click)="onClickLimpiarProvincias()"
                 matTooltip="Pulsar para limpiar el provincias" matTooltipPosition="below">
                 <mat-icon>delete</mat-icon>
+              </button>
+              <button type="button" mat-fab style="margin-left: 5px;" aria-label="Limpiar filtros" (click)="onClickLimpiarFiltrosProvincia()"
+                matTooltip="Limpia filtros aplicados volviendo a los datos originales" matTooltipPosition="below">
+                <mat-icon>cleaning_services</mat-icon>
               </button>
               <button type="button" mat-fab style="margin-left: 5px;" aria-label="Exportar a Excel" (click)="exportJsonProvincias()"
                 matTooltip="Pulsar para exportar excel" matTooltipPosition="below">
@@ -158,14 +178,20 @@
             <mat-icon>refresh</mat-icon>
           </button>
 
-          <div [hidden]="!((muniGenerado.data.length && muniGenerado.data.length > 0))">
+          <div [hidden]="!((muniGeneradoOriginal.length && muniGeneradoOriginal.length > 0))">
             <table mat-table #sortMuniGenerado="matSort" [dataSource]="muniGenerado" matSort  (matSortChange)="announceSortChange($event)">
 
               <!-- Opcion de parametrizar columna y mostrar por tipo en vez de hacerlo por cada columna
                 https://muhimasri.com/blogs/create-an-editable-dynamic-table-using-angular-material/
               -->
               <ng-container [matColumnDef]="col.key" *ngFor="let col of columnsSchemaMuniGenerado">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{col.label}}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{col.label}}
+                  <button mat-icon-button (click)="$event.stopPropagation(); openFilterMunicipio(col.key); ">
+                    <mat-icon>search</mat-icon>
+                  </button>
+                  <input class="filtroCabeceraTabla" #inputSearchMunicipio type="text" hidden id="{{col.key}}-filterMunicipio"
+                    (blur)="filterDataMunicipio(col.columna, inputSearchMunicipio.value); closeFilterMunicipio(col.key)" />
+                </th>
                 <td mat-cell *matCellDef="let municipio">
                   <!-- Seleccionamos por el type como mostrarlo-->
                   <div [ngSwitch]="col.type" >
@@ -195,6 +221,10 @@
               <button type="button" mat-fab style="margin-left: 5px;" aria-label="Limpiar resultado" (click)="onClickLimpiarMunicipios()"
                 matTooltip="Pulsar para limpiar el municipios" matTooltipPosition="below">
                 <mat-icon>delete</mat-icon>
+              </button>
+              <button type="button" mat-fab style="margin-left: 5px;" aria-label="Limpiar filtros" (click)="onClickLimpiarFiltrosMunicipio()"
+                matTooltip="Limpia filtros aplicados volviendo a los datos originales" matTooltipPosition="below">
+                <mat-icon>cleaning_services</mat-icon>
               </button>
               <button type="button" mat-fab style="margin-left: 5px;" aria-label="Exportar a Excel" (click)="exportJsonMunicipios()"
                 matTooltip="Pulsar para exportar excel" matTooltipPosition="below">
@@ -275,15 +305,21 @@
           </button>
         </div>
 
-        <div [hidden]="!((direccionGenerado.data.length && direccionGenerado.data.length > 0))">
+        <div [hidden]="!((direccionGeneradoOriginal.length && direccionGeneradoOriginal.length > 0))">
           <div class="table-responsive">
-            <table mat-table #sortDireccionGenerado="matSort" [dataSource]="direccionGenerado" matSort  (matSortChange)="announceSortChange($event)">
+            <table mat-table #sortDireccionGenerado="matSort" [dataSource]="direccionGenerado" matSort (matSortChange)="sortDataDirecciones($event)">
 
               <!-- Opcion de parametrizar columna y mostrar por tipo en vez de hacerlo por cada columna
                 https://muhimasri.com/blogs/create-an-editable-dynamic-table-using-angular-material/
               -->
               <ng-container [matColumnDef]="col.key" *ngFor="let col of columnsSchemaDireccionGenerado">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{col.label}}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{col.label}}
+                  <button mat-icon-button (click)="$event.stopPropagation(); openFilterDirecciones(col.key); ">
+                    <mat-icon>search</mat-icon>
+                  </button>
+                  <input class="filtroCabeceraTabla" #inputSearchDireccion type="text" hidden id="{{col.key}}-filterDireccion"
+                    (blur)="filterDataDirecciones(col.columna, inputSearchDireccion.value); closeFilterDirecciones(col.key)" />
+                </th>
                 <td mat-cell *matCellDef="let direccion">
                   <!-- Seleccionamos por el type como mostrarlo-->
                   <div [ngSwitch]="col.type" >
@@ -320,6 +356,10 @@
             <button type="button" mat-fab style="margin-left: 5px;" aria-label="Limpiar resultado" (click)="onClickLimpiarDomicilios()"
               matTooltip="Pulsar para limpiar las direcciones" matTooltipPosition="below">
               <mat-icon>delete</mat-icon>
+            </button>
+            <button type="button" mat-fab style="margin-left: 5px;" aria-label="Limpiar filtros" (click)="onClickLimpiarFiltrosDomicilios()"
+              matTooltip="Limpia filtros aplicados volviendo a los datos originales" matTooltipPosition="below">
+              <mat-icon>cleaning_services</mat-icon>
             </button>
             <button type="button" mat-fab style="margin-left: 5px;" aria-label="Exportar a Excel" (click)="exportJsonDomicilios()"
               matTooltip="Pulsar para exportar excel" matTooltipPosition="below">
